# dmenu_facade_rs

./: Cargo.toml  README.md
examples/: complex_struct.rs  input.rs  simple.rs
src/: lib.rs  main.rs
