[package]
name = "dmenu_facade"
version = "0.1.0"
authors = ["Christoffer Nørbjerg <Chrisnorbjerg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dmenu_facade_testing"
path = "src/main.rs"

[lib]
name = "dmenu_facade"
path = "src/lib.rs"
