[package]
name = "dmenu_facade"
version = "0.3.0"
authors = ["Christoffer Nørbjerg <Chrisnorbjerg@gmail.com>"]
edition = "2018"
description = "A rust wrapper for interacting through dmenu. Depends on dmenu being installed"
readme = "README.md"
repository = "https://github.com/ChilloManiac/dmenu_facade_rs"
license = "MIT"
keywords = ["dmenu", "shell"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "complex"
path = "examples/complex_struct.rs"

[[example]]
name = "input"
path = "examples/input.rs"
